# kattis

./: Kattis.cabal
src/: ExcellentEngineers.hs  HoleyNQueens.hs  TwentyFortyEight.hs
