name: Kattis
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
homepage: mccarty.io
synopsis: Kattis problems
description:
     

executable Kattis
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-Kattis
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
